Fix dark mode text selection.

--- a/dark.max.css
+++ b/dark.max.css
@@ -38,7 +38,7 @@ img {
 }
 
 ::selection {
-     color: #fff;
+     color: #222;
      background-color: #ffffff;
 }
 
